--- a/libs/ngx-cdk-table/src/lib/components/ngx-table-inputs/number-input/number-input.component.html
+++ b/libs/ngx-cdk-table/src/lib/components/ngx-table-inputs/number-input/number-input.component.html
@@ -4,5 +4,10 @@
   [floatLabel]="defaultInputColumns.label?.floatLabel ?? 'always'"
 >
   <mat-label> {{ defaultInputColumns.label?.value }} </mat-label>
-  <input matInput />
+  <input
+    [disabled]="!!defaultInputColumns.readonly"
+    [formControl]="control"
+    type="number"
+    matInput
+  />
 </mat-form-field>
