✨ feat: validation date table cell view

--- a/libs/ngx-cdk-table/src/lib/components/ngx-table-inputs/checkbox-input/checkbox-input.component.html
+++ b/libs/ngx-cdk-table/src/lib/components/ngx-table-inputs/checkbox-input/checkbox-input.component.html
@@ -1,6 +1,6 @@
 <mat-checkbox
   color="primary"
-  [disabled]="!!defaultInputColumns.readonly"
+  [disabled]="!!defaultInputColumns.readonly || !!defaultInputColumns.disabled"
   [formControl]="control"
 ></mat-checkbox>
 <mat-label *ngIf="defaultInputColumns.label">
