--- a/libs/ngx-cdk-table/src/lib/components/ngx-table-inputs/text-input/text-input.component.html
+++ b/libs/ngx-cdk-table/src/lib/components/ngx-table-inputs/text-input/text-input.component.html
@@ -9,5 +9,6 @@
     [formControl]="control"
     matInput
     [readonly]="!!defaultInputColumns.readonly"
+    [disabled]="!!defaultInputColumns.disabled"
   />
 </mat-form-field>
