📦 refactor: update abstract method and add readonly and disabled fields in table input

--- a/apps/customer-portal/src/app/app.component.html
+++ b/apps/customer-portal/src/app/app.component.html
@@ -3,7 +3,8 @@
   [tableOptions]="editTableOptions"
   [columnOptions]="editColumnOptions"
   (eventAction)="tableEvents($event)"
-></ngx-cdk-table>
+>
+</ngx-cdk-table>
 
 <ngx-cdk-table
   *ngIf="selectedDataSource.length > 0; else noData"
