--- a/libs/ngx-cdk-table/src/lib/components/ngx-cdk-table/ngx-cdk-table.component.html
+++ b/libs/ngx-cdk-table/src/lib/components/ngx-cdk-table/ngx-cdk-table.component.html
@@ -234,7 +234,7 @@
       <!-- Container que os botões de paginas  -->
       <ng-container
         *ngFor="
-          let item of originalDataSource
+          let item of dataSource
             | paginate
               : {
                   itemsPerPage: tableOptions.paginatorProperties.itemsPerPage,
