📦 refactor: apply test in lib and refactor app features

--- a/apps/customer-portal/src/app/app.component.html
+++ b/apps/customer-portal/src/app/app.component.html
@@ -7,6 +7,7 @@
 </ngx-cdk-table>
 
 <ngx-cdk-table
+  class="selection-table"
   *ngIf="selectedDataSource.length > 0; else noData"
   [dataSource]="selectedDataSource"
   [tableOptions]="tableOptions"
