--- a/libs/ngx-cdk-table/src/lib/components/ngx-table-inputs/checkbox-input/checkbox-input.component.html
+++ b/libs/ngx-cdk-table/src/lib/components/ngx-table-inputs/checkbox-input/checkbox-input.component.html
@@ -1,8 +1,4 @@
-<mat-checkbox
-  color="primary"
-  [disabled]="!!defaultInputColumns.readonly || !!defaultInputColumns.disabled"
-  [formControl]="control"
-></mat-checkbox>
+<mat-checkbox color="primary" [formControl]="control"></mat-checkbox>
 <mat-label *ngIf="defaultInputColumns.label">
   {{ defaultInputColumns.label.value }}
 </mat-label>
