--- a/libs/ngx-cdk-table/src/lib/components/ngx-table-inputs/number-input/number-input.component.html
+++ b/libs/ngx-cdk-table/src/lib/components/ngx-table-inputs/number-input/number-input.component.html
@@ -5,8 +5,7 @@
 >
   <mat-label> {{ defaultInputColumns.label?.value }} </mat-label>
   <input
-    [disabled]="!!defaultInputColumns.disabled"
-    [readonly]="!!defaultInputColumns.readonly"
+    [readonly]="!!defaultInputColumns.formControlProperties.readonly"
     [formControl]="control"
     type="number"
     matInput
