--- a/libs/ngx-cdk-table/src/lib/components/ngx-table-inputs/select-input/select-input.component.html
+++ b/libs/ngx-cdk-table/src/lib/components/ngx-table-inputs/select-input/select-input.component.html
@@ -1,14 +1,13 @@
 <mat-form-field
   *ngIf="defaultInputColumns"
   appearance="outline"
-  [class.mat-form-field-readonly]="!!defaultInputColumns.readonly"
+  [class.mat-form-field-readonly]="
+    !!defaultInputColumns.formControlProperties.readonly
+  "
   [floatLabel]="defaultInputColumns.label?.floatLabel ?? 'always'"
 >
   <mat-label> {{ defaultInputColumns.label?.value }} </mat-label>
   <mat-select
-    [disabled]="
-      !!defaultInputColumns.disabled || !!defaultInputColumns.readonly
-    "
     [formControl]="control"
     [placeholder]="defaultInputColumns.placeholder ?? ''"
   >
