--- a/apps/customer-portal/src/styles.scss
+++ b/apps/customer-portal/src/styles.scss
@@ -1,21 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import 'theme.scss';
+
 html,
 body {
   height: 100%;
-}
-
-.pagination-next,
-.pagination-previous {
-  border: 1px solid;
-  border-radius: 5px !important;
-}
-.ngx-pagination .current {
-  background-color: blue !important;
-}
-.ngx-pagination .current,
-.ngx-pagination li,
-.ngx-pagination a,
-.ngx-pagination button {
-  border-radius: 5px !important;
 }
